# raspberry-home

./: .gitignore  .gitmodules  Makefile  README.md  deploy.sh  deploy2.sh  docker-compose.yml  example.env  pyproject.toml  setup.cfg
_archive/wireguard/: wg0.client.conf
bot/src/: bot.py
control/: README.md  docker-compose.yml  example.env  pyproject.toml
control/agent/: agent.py  cmd_agent.service
control/bot/: bot.py  settings.py
control/bot/adapters/: __init__.py  base.py  motion.py  pi.py
control/cmd_agent/: agent.py  cmd_agent.service
control_unit/: docker-compose.override.yml  docker-compose.yml  pyproject.toml
control_unit/bot/: __init__.py  bot.py  dispatcher.py  main.py  settings.py
control_unit/bot/adapters/: base.py  motion.py  pi.py
control_unit/bot/handlers/: __init__.py  motion.py  pi.py  self.py
control_unit/cmd_agent/: cmd_agent.service
control_unit/docker/: Dockerfile  entrypoint.sh
modules/admin/requirements/: base.txt
modules/camera/: app.py  settings.py  views.py
modules/camera/docker/: Dockerfile  entrypoint.sh
modules/camera/requirements/: dev.txt  prod.txt
monitoring/: README.md  docker-compose.node.yml  docker-compose.yml  prometheus.yml  promtail.yml
monitoring/logrotate/: cmd_agent.conf  rclone.conf
motion/: README.md  motion.conf  on_movie_end.sh  on_movie_start.sh
rclone/: README.md  backup.sh  ignore.txt
requirements/: dev.txt  prod.txt
samba/: README.md  smb.conf
src/camera/: __init__.py  app.py  views.py
wireguard/: README.md  wg0.server.conf
wirehole/: README.md  docker-compose.yml
(+15 files in other folders)
