[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "raspberry-home"
version = "0.1.0"
description = "Raspberry Pi + VPS home project"
authors = ["Denis Kazakov <denis@kazakov.ru.net>"]
repository = "https://github.com/KazakovDenis/raspberry-home"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.20"
environs = "^9.5.0"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
coverage = "^6.4"
isort = "^5.10"
flake8 = "^4"
flake8-pytest-style = "^1.6.0"
pyproject-flake8 = "^0.0.1-alpha.4"
pytest = "^7.1"

[tool.isort]
indent = 4
line_length = 120
multi_line_output = 3
combine_as_imports = true
include_trailing_comma = true
lines_after_imports = 2

[tool.flake8]
max-line-length = 120
pytest-parametrize-names-type = "csv"
pytest-fixture-no-parentheses = true
pytest-mark-no-parentheses = true
per-file-ignores = []

[tool.pytest.ini_options]
testpaths = ["bot/tests"]
addopts = "-v"

[tool.coverage.report]
fail_under = 80
sort = "-Cover"
